--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,5 @@
 <main-layout
-    [title]="'Data Science Web Application'"
+    [title]="'H20'"
     [hasSideNav]="false"
     [menuItems]="menuItems"
     [logoUrl]="'assets/images/logo.png'">
