--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -5,7 +5,7 @@
     [logoUrl]="'assets/images/logo.png'">
     <router-outlet></router-outlet>
     <div fxLayoutAlign="center center" class="app__footer">
-        <span>&copy; 2018 - Daniel Elsner
+        <span>&copy; 2018 Outlier Ventures
         </span>
     </div>
 </main-layout>
