OrbitDB front-end, configure node for backend

--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -2,6 +2,9 @@
     <h1>Iris Model - Example</h1>
 
     <div class="home__training">
+      <button md-raised-button (click)="getOrbit()">
+          Get OrbitDB database
+      </button>
         <h3>Train Classification Model (Support Vector Machine)</h3>
         <md-card fxLayoutAlign="center center" fxLayout="column">
             <h4>Set Parameter for Model Training</h4>
