Clustering with user-spec no centroids, render result

--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <div fxLayoutAlign="center center" fxLayout="column">
-    <h1>Iris Model - Example</h1>
+    <h1>Clustering in Nautilina with OrbitDB</h1>
 
     <div class="home__training">
         <md-card fxLayoutAlign="center center" fxLayout="column">
@@ -21,6 +21,7 @@
             <button md-raised-button (click)="trainModel()">
                 Run clustering
             </button>
+            <img src="../../assets/images/after.png" alt="" style="width: 80%">
         </md-card>
 
         <div *ngIf="MLResult"
