App-wide parameter rename

--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -30,9 +30,9 @@
             <md-input-container>
                 <input
                     mdInput
-                    name="Asset title"
-                    placeholder="Asset title"
-                    [(ngModel)]="OceanParams.title">
+                    name="Asset name"
+                    placeholder="Asset name"
+                    [(ngModel)]="OceanParams.name">
             </md-input-container>
             <button md-raised-button (click)="publishAsset()">
                 Publish
