UI ready for link with backend

--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -27,6 +27,12 @@
         <br />
         <md-card fxLayoutAlign="center center" fxLayout="column">
             <h4>Publish result to Ocean Protocol</h4>
+            <p>
+                Clustering output has been saved next to H2O, formatted for Ocean Protocol.
+                <br /><br />
+                Host the dataset at your desired address and publish below.
+            </p>
+            <br />
             <md-input-container>
                 <input
                     mdInput
