Identifiable md-card

--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -25,7 +25,7 @@
             <img src="../../assets/images/after.png" alt="" style="width: 80%">
         </md-card>
         <br />
-        <md-card fxLayoutAlign="center center" fxLayout="column">
+        <md-card id="form" fxLayoutAlign="center center" fxLayout="column">
             <h4>Publish result to Ocean Protocol</h4>
             <p>
                 Clustering output has been saved next to H2O, formatted for Ocean Protocol.
