Angular correct titile

--- a/h2o/frontend/src/app/app.component.html
+++ b/h2o/frontend/src/app/app.component.html
@@ -1,5 +1,5 @@
 <main-layout
-    [title]="'H20'"
+    [title]="'H2O'"
     [hasSideNav]="false"
     [menuItems]="menuItems"
     [logoUrl]="'assets/images/logo.png'">
