--- a/frontend/src/app/shared/layouts/main-layout/nav-bar/nav-bar.component.scss
+++ b/frontend/src/app/shared/layouts/main-layout/nav-bar/nav-bar.component.scss
@@ -2,7 +2,7 @@
 
 $top-nav-box-shadow: 0 0 1px 1px rgba(0, 0, 0, .14), 0 0 2px 2px rgba(0, 0, 0, .098), 0 0 5px 1px rgba(0, 0, 0, .084);
 $z-index-top-nav: 999;
-$nav-bar-bg: #ffffff;
+$nav-bar-bg: #191919;
 
 md-toolbar {
     height: $top-nav-height;
@@ -13,20 +13,20 @@ md-toolbar {
 }
 
 .navigation-item {
-    color: $dark-font-color;
+    color: $light-font-color;
     text-decoration: none;
     padding: $unit-sm;
     text-transform: uppercase;
     font-weight: $font-bold;
-    font-size: $font-size-regular;
+    font-size: $font-size-large;
 
     &.navigation-item--active {
-        border-bottom: 3px solid $warn;
+        border-bottom: 3px solid #5936cc;
     }
 }
 
 .navigation-item-menu--active {
-    color: $warn;
+    color: #5936cc;
 }
 
 .nav-bar__title {
