Move dynamic content to backend for proxy pass

--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -16,7 +16,7 @@
                   Replicate database
               </button>
             </div>
-            <img src="../../assets/images/before.png" alt="" style="width: 80%">
+            <img src="../../../../backend/images/before.png" alt="" style="width: 80%">
         </md-card>
         <br />
         <md-card fxLayoutAlign="center center" fxLayout="column">
@@ -31,7 +31,7 @@
             <button md-raised-button (click)="trainModel()">
                 Run clustering
             </button>
-            <img src="../../assets/images/after.png" alt="" style="width: 80%">
+            <img src="../../../../backend/images/after.png" alt="" style="width: 80%">
         </md-card>
         <br />
         <md-card id="form" fxLayoutAlign="center center" fxLayout="column">
